# Mini-Language-Compiler

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  comp.bat
.github/workflows/: cmake.yml  codeql-analysis.yml
example/: program.txt
src/: CFG.c  boolean.h  cfg.c  mesinkarakter.c  mesinkarakter.h  scanner.c  scanner.h  stack.c  stack.h
src/header/: boolean.h  mesin_karakter.h  scanner.h  stack.h
